--- a/app.json
+++ b/app.json
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 {
   "pages":[
     "pages/index/index",
@@ -13,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#00b26a",
-    "navigationBarTitleText": "¹þ¹þ¹þ¹þ",
+    "navigationBarTitleText": "é¦–é¡µ",
     "navigationBarTextStyle":"#fff"
   },
   "tabBar":{
@@ -21,13 +14,13 @@
     "list":[
       {
         "pagePath": "pages/index/index",
-        "text": "Ê×Ò³",
+        "text": "é¦–é¡µ",
         "iconPath": "image/home.png",
         "selectedIconPath": "image/home2.png"
       },
       {
         "pagePath": "pages/logs/logs",
-        "text": "²âÊÔ"
+        "text": "æµ‹è¯•"
       }
     ]
   }
